--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "update-package-json",
+	"name": "bump-package",
 	"version": "1.0.0",
 	"description": "Script to bump version of package.json file",
-	"main": "updatePackage",
+	"main": "bumpPackage",
 	"dependencies": {
 		"inquirer": "^6.0.0"
 	},
